--- a/src/app/pages/holding/holding.component.html
+++ b/src/app/pages/holding/holding.component.html
@@ -46,65 +46,69 @@
     </ng-container>
 
     <ng-container>
-        <div class="text-end">
+        <!-- <div class="text-end">
             <input type="submit" value=""
                 class="fa fa-file - excel - o btn btn-default btn - block text-primary me-3 stox-btn btn-2">
             <input type="submit" value=""
                 class="fa fa-file-pdf-o btn  btn-default btn-block text-danger stox-btn btn-2">
-        </div>
+        </div> -->
 
         <div class="table-responsive mt-2">
             <table class="table table-hover table-bordered">
                 <thead class="table-dark">
-                    <tr>
-                        <th scope="col">Client Code</th>
-                        <th scope="col">Client Name</th>
-                        <th scope="col">Trade Date</th>
-                        <th scope="col">Settlement No.</th>
-                        <th scope="col">Settlement Type</th>
-                        <th scope="col">Bill No</th>
-                        <th scope="col">Bill Date</th>
-                        <th scope="col">Bill Amount</th>
-                        <th scope="col">Gross Value</th>
-                        <th scope="col">Total Expenses</th>
-                        <th scope="col">Brokerage</th>
-                        <th scope="col">Clearing Charges/Auct.</th>
-                        <th scope="col">Exchange Charges</th>
-                        <th scope="col">SEBI Charges</th>
-                        <th scope="col">Transaction Charges</th>
-                        <th scope="col">STT Charges</th>
-                        <th scope="col">Stamp Duty</th>
-                        <th scope="col">Demat Charges</th>
-                        <th scope="col">IPF Charge</th>
-                        <th scope="col">GST</th>
+                    <tr role="row">
+                        <th rowspan="2" colspan="1">Symbol</th>
+                        <th rowspan="2" colspan="1">ISIN</th>
+                        <th colspan="4" rowspan="1">Stocks</th>
+                        <th rowspan="2" colspan="1">Price</th>
+                        <th rowspan="2" colspan="1">VAR %</th>
+                        <th rowspan="2" colspan="1">Approved Flag</th>
+                        <th rowspan="2" colspan="1">Category</th>
+                        <th rowspan="2" colspan="1"> Margin Pledge Val</th>
+                        <th colspan="2" rowspan="1">Valuation</th>
+                        <th rowspan="2" colspan="1"> Buy Avg </th>
+                        <th rowspan="2" colspan="1">Notional PNL</th>
+                    </tr>
+                    <tr role="row">
+                        <th rowspan="1" colspan="1">Beneficiary</th>
+                        <th rowspan="1" colspan="1">Margin Pledge</th>
+                        <th rowspan="1" colspan="1">DP</th>
+                        <th rowspan="1" colspan="1">Total</th>
+                        <th rowspan="1" colspan="1">Holding Value</th>
+                        <th rowspan="1" colspan="1">Value After VAR</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="col">245</th>
-                        <th scope="col">Test</th>
-                        <th scope="col">04/12/2023</th>
-                        <th scope="col">095434</th>
-                        <th scope="col">Cased</th>
-                        <th scope="col">5624789</th>
-                        <th scope="col">3/12/2023</th>
-                        <th scope="col">$550</th>
-                        <th scope="col">$500</th>
-                        <th scope="col">100%</th>
-                        <th scope="col">10%</th>
-                        <th scope="col">Pending</th>
-                        <th scope="col">0</th>
-                        <th scope="col">0</th>
-                        <th scope="col">0.2%</th>
-                        <th scope="col">0.00%</th>
-                        <th scope="col">one</th>
-                        <th scope="col">2%</th>
-                        <th scope="col">10%</th>
-                        <th scope="col">0.5%</th>
+                        <td>AIAENG</td>
+                        <td>INE212H01026</td>
+                        <td>0</td>
+                        <td>0 </td>
+                        <td>68 </td>
+                        <td>68.000</td>
+                        <td>3678.85</td>
+                        <td>10.60</td>
+                        <td>Y</td>
+                        <td>NON-CASH</td>
+                        <td>0.00</td>
+                        <td>250161.80</td>
+                        <td>223644.65</td>
+                        <td>3606.30</td>
+                        <td>4933.40</td>
                     </tr>
                 </tbody>
+                <tfoot class="table-dark">
+                    <tr>
+                        <td colspan="7" rowspan="1">&nbsp;</td>
+                        <td colspan="3" rowspan="1">Total</td>
+                        <td rowspan="1" colspan="1">0.00</td>
+                        <td rowspan="1" colspan="1">5536133.05</td>
+                        <td rowspan="1" colspan="1">4753886.03</td>
+                        <td rowspan="1" colspan="1">&nbsp;</td>
+                        <td rowspan="1" colspan="1">519754.65</td>
+                    </tr>
+                </tfoot>
             </table>
         </div>
     </ng-container>
-
 </section>
