--- a/src/app/pages/NSDL Reports/transaction/transaction.component.html
+++ b/src/app/pages/NSDL Reports/transaction/transaction.component.html
@@ -1,5 +1,5 @@
 <section class="stox-card">
-    <h1 class="text-center stox-title">Contract Note</h1>
+    <h1 class="text-center stox-title">Transaction</h1>
     <ng-container>
         <form class="row g-3">
             <div class="col-md-6">
