--- a/src/app/pages/Reports/derivative-p-and-l-statement/derivative-p-and-l-statement.component.html
+++ b/src/app/pages/Reports/derivative-p-and-l-statement/derivative-p-and-l-statement.component.html
@@ -2,10 +2,10 @@
     <h1 class="text-center stox-title">Derivative P&L Statement</h1>
     <h2 class="text-center stox-sub-title"> From 01-12-2023 To 31-03-2024</h2>
     <ng-container>
-        <form class="row g-3 mb-3">
+        <form class="row g-3 mb-3" [formGroup]="derivativePLGroup" (ngSubmit)="save()">
             <div class="col-md-6">
                 <label for="inputState" class="form-label">Exchange</label>
-                <select id="inputState" class="form-select">
+                <select id="inputState" class="form-select" [formControl]="f.Exchange">
                     <option selected value="NSE">NSE</option>
                     <option value="BSE">BSE</option>
                     <option value="MCX">MCX</option>
@@ -13,7 +13,7 @@
             </div>
             <div class="col-md-6">
                 <label for="inputState" class="form-label">Segment</label>
-                <select id="inputState" class="form-select">
+                <select id="inputState" class="form-select" [formControl]="f.Segment">
                     <option value="COM">COM</option>
                     <option value="CUR">CUR</option>
                     <option selected value="FNO">FNO</option>
@@ -21,11 +21,30 @@
             </div>
             <div class="col-md-6">
                 <label for="inputEmail4" class="form-label">From Date</label>
-                <input type="date" class="form-control" id="From">
+                <input type="date" class="form-control" id="From" [formControl]="f.FromDate">
             </div>
             <div class="col-md-6">
                 <label for="inputPassword4" class="form-label">To Date</label>
-                <input type="date" class="form-control" id="to">
+                <input type="date" class="form-control" id="to" [formControl]="f.ToDate">
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">Expiry Date</label>
+                <input type="date" class="form-control" id="to" [formControl]="f.ExpiryDate">
+            </div>
+            <div class="col-md-6">
+                <label for="inputState" class="form-label">Option Type</label>
+                <select id="inputState" class="form-select" [formControl]="f.OptionType">
+                    <option value="CE">Call</option>
+                    <option value="PE">Put</option>
+                </select>
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">CTCLID</label>
+                <input type="text" class="form-control" id="CTCLID" placeholder="CTC LID" [formControl]="f.CTCLID">
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">User ID</label>
+                <input type="text" class="form-control" id="UserID" placeholder="User ID" [formControl]="f.UserID">
             </div>
             <div class="col-12">
                 <div class="form-check">
