--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -127,6 +127,28 @@
         </div>
     </div>
     <div class="stox-card">
+        <!-- Reports -->
 
+
+        <div class="card-body">
+            <div class="row">
+                <h5 class="card-title col-md-6">Reports <span>/Today</span></h5>
+                <div class="col-md-6 card-title text-end">
+                    <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
+                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+                        <li class="dropdown-header text-start">
+                            <h6>Filter</h6>
+                        </li>
+
+                        <li><a class="dropdown-item" href="#">Today</a></li>
+                        <li><a class="dropdown-item" href="#">This Month</a></li>
+                        <li><a class="dropdown-item" href="#">This Year</a></li>
+                    </ul>
+                </div>
+                <!-- Line Chart -->
+                <div class="col-md-12" id="reportsChart"></div>
+            </div>
+
+        </div>
     </div>
 </section>
