--- a/src/app/pages/Reports/equity-p-and-l-report/equity-p-and-l-report.component.html
+++ b/src/app/pages/Reports/equity-p-and-l-report/equity-p-and-l-report.component.html
@@ -3,29 +3,29 @@
     <h2 class="text-center stox-sub-title"> From 01-12-2023 To 31-03-2024</h2>
     <ng-container>
         <form class="row g-3 mb-3" [formGroup]="longShortGroup" (ngSubmit)="save()">
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputEmail4" class="form-label">From Date</label>
                 <input type="date" class="form-control" id="From" [formControl]="f.FromDate">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">To Date</label>
                 <input type="date" class="form-control" id="to" [formControl]="f.ToDate">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">Rate Date</label>
                 <input type="date" class="form-control" id="to" [formControl]="f.RateDate">
-                <div class="form-check mt-2">
-                    <label class="form-check-label" for="gridCheck">
-                        Date Range Flag
-                    </label>
-                    <input class="form-check-input" type="checkbox" id="gridCheck">
-                </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">On Market Rate</label>
                 <input type="text" class="form-control" id="to" [formControl]="f.OnMarketRate ">
             </div>
-            <div class="col-12 text-end">
+            <div class="col-md-3 form-check mt-2 ms-2">
+                <label class="form-check-label" for="gridCheck">
+                    Date Range Flag
+                </label>
+                <input class="form-check-input" type="checkbox" id="gridCheck">
+            </div>
+            <div class="col-12 text-end mt-0">
                 <button type="submit" class="btn btn-primary">Run</button>
             </div>
         </form>
