--- a/src/app/pages/Download/contract-note/contract-note.component.html
+++ b/src/app/pages/Download/contract-note/contract-note.component.html
@@ -2,19 +2,21 @@
     <h1 class="text-center stox-title">Contract Note</h1>
     <ng-container>
         <form class="row g-3">
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputEmail4" class="form-label">From Date</label>
                 <input type="date" class="form-control" id="From">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">To Date</label>
                 <input type="date" class="form-control" id="to">
             </div>
-            <div class="col-12 text-center">
-                <input type="submit" value=""
-                    class="fa fa-file-pdf-o me-3 btn  btn-default btn-block text-danger stox-btn btn-2">
-                <button type="submit" name="EMAIL" class="fa fa-envelope btn btn-default btn-block stox-btn btn-2"
-                    style="font-size:25px; color: black;"></button>
+            <div class="col-md-3">
+                <div style="margin-top: 27px;">
+                    <input type="submit" value=""
+                        class="fa fa-file-pdf-o me-3 btn  btn-default btn-block text-danger stox-btn btn-2">
+                    <button type="submit" name="EMAIL" class="fa fa-envelope btn btn-default btn-block stox-btn btn-2"
+                        style="font-size:25px; color: black;"></button>
+                </div>
             </div>
         </form>
     </ng-container>
