--- a/src/app/pages/NSDL Reports/nsdl-financial/nsdl-financial.component.html
+++ b/src/app/pages/NSDL Reports/nsdl-financial/nsdl-financial.component.html
@@ -3,23 +3,23 @@
     <!-- <h2 class="text-center stox-sub-title"> From 01-12-2023 To 31-03-2024</h2> -->
     <ng-container>
         <form class="row g-3 mb-3">
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputEmail4" class="form-label">From Date</label>
                 <input type="date" class="form-control" id="From">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputEmail4" class="form-label">To Date</label>
                 <input type="date" class="form-control" id="to">
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputState" class="form-label">Client ID</label>
                 <select id="inputState" class="form-select">
                     <option selected value="10628651">10628651</option>
                 </select>
             </div>
-            <div class="col-12 text-end">
-                <button type="submit" class="btn btn-primary">Run</button>
+            <div class="col-md-3 text-end">
+                <button style="margin-top: 27px;" type="submit" class="btn btn-primary">Run</button>
             </div>
         </form>
     </ng-container>
