--- a/src/app/pages/NSDL Reports/transaction/transaction.component.html
+++ b/src/app/pages/NSDL Reports/transaction/transaction.component.html
@@ -2,15 +2,15 @@
     <h1 class="text-center stox-title">Transaction</h1>
     <ng-container>
         <form class="row g-3">
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputEmail4" class="form-label">From Date</label>
                 <input type="date" class="form-control" id="From">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">To Date</label>
                 <input type="date" class="form-control" id="to">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">ISIN</label>
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" aria-label="Recipient's username"
@@ -20,13 +20,13 @@
                     </button>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputState" class="form-label">Client ID</label>
                 <select id="inputState" class="form-select">
                     <option selected value="10628651">10628651</option>
                 </select>
             </div>
-            <div class="col-12 text-center">
+            <div class="col-12 text-end ">
                 <input type="submit" value=""
                     class="fa fa-file-pdf-o me-3 btn  btn-default btn-block text-danger stox-btn btn-2">
                 <button type="submit" name="EMAIL" class="fa fa-envelope btn btn-default btn-block stox-btn btn-2"
