--- a/src/app/pages/Net-Position/net-position-derivative/net-position-derivative.component.html
+++ b/src/app/pages/Net-Position/net-position-derivative/net-position-derivative.component.html
@@ -3,15 +3,15 @@
     <h2 class="text-center stox-sub-title"> As on Date 06-12-2023</h2>
     <ng-container>
         <form class="row g-3 mb-3" [formGroup]="netPositionGroup" (ngSubmit)="save()">
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">From Date</label>
                 <input type="date" class="form-control" id="from" [formControl]="f.FromDate">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">To Date</label>
                 <input type="date" class="form-control" id="to" [formControl]="f.ToDate">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputState" class="form-label">Exchange</label>
                 <select id="inputState" class="form-select" [formControl]="f.Exchange">
                     <option selected value="NSE">NSE</option>
@@ -19,7 +19,7 @@
                     <option value="MCX">MCX</option>
                 </select>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputState" class="form-label">Segment</label>
                 <select id="inputState" class="form-select" [formControl]="f.Segment">
                     <option value="COM">COM</option>
@@ -27,7 +27,7 @@
                     <option selected value="FNO">FNO</option>
                 </select>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">Scrip Code</label>
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" aria-label="Recipient's username"
@@ -37,23 +37,21 @@
                     </button>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">Settlement No</label>
                 <input type="text" class="form-control" id="from" [formControl]="f.SettlementNo">
             </div>
-            <div class="col-md-6 mt-0">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">Settlement Type </label>
                 <input type="text" class="form-control" id="to" [formControl]="f.SettlementType">
             </div>
-            <div class="col-12">
-                <div class="form-check">
+            <div class="col-md-3">
+                <div class="form-check mt-3">
                     <label class="form-check-label" for="potion">
                         Ignore Zero Position
                     </label>
                     <input class="form-check-input" type="checkbox" id="potion">
                 </div>
-            </div>
-            <div class="col-12">
                 <div class="form-check">
                     <label class="form-check-label" for="gridCheck">
                         Quantity In Lot
@@ -61,7 +59,7 @@
                     <input class="form-check-input" type="checkbox" id="gridCheck">
                 </div>
             </div>
-            <div class="col-12 text-end">
+            <div class="col-12 text-end mt-0">
                 <button type="submit" class="btn btn-primary">Run</button>
             </div>
         </form>
