--- a/src/app/pages/RMS/exchange-re-pledge-report/exchange-re-pledge-report.component.html
+++ b/src/app/pages/RMS/exchange-re-pledge-report/exchange-re-pledge-report.component.html
@@ -3,15 +3,11 @@
     <!-- <h2 class="text-center stox-sub-title"> From 01-12-2023 To 31-03-2024</h2> -->
     <ng-container>
         <form class="row g-3 mb-3">
-            <div class="col-md-12">
-                <div class="row">
-                    <div class="col-md-6">
-                        <label for="inputPassword4" class="form-label">To Date</label>
-                        <input type="date" class="form-control" id="report_date">
-                    </div>
-                </div>
+            <div class="col-md-3">
+                <label for="inputPassword4" class="form-label">To Date</label>
+                <input type="date" class="form-control" id="report_date">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputState" class="form-label">Exchange</label>
                 <select id="inputState" class="form-select">
                     <option selected value="NSE">NSE</option>
@@ -19,14 +15,14 @@
                     <option value="MCX">MCX</option>
                 </select>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputState" class="form-label">Segment</label>
                 <select id="inputState" class="form-select">
                     <option selected value="ALL">ALl</option>
                 </select>
             </div>
-            <div class="col-12 text-end">
-                <button type="submit" class="btn btn-primary">Run</button>
+            <div class="col-md-3">
+                <button style="margin-top: 27px;" type="submit" class="btn btn-primary">Run</button>
             </div>
         </form>
     </ng-container>
