--- a/src/app/pages/Reports/derivative-bills-summary/derivative-bills-summary.component.html
+++ b/src/app/pages/Reports/derivative-bills-summary/derivative-bills-summary.component.html
@@ -3,15 +3,15 @@
     <h2 class="text-center stox-sub-title"> From 01-12-2023 To 31-03-2024</h2>
     <ng-container>
         <form class="row g-3 mb-3" [formGroup]="derivativeBillGroup" (ngSubmit)="save()">
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">From Date</label>
                 <input type="date" class="form-control" id="from" [formControl]="f.FromDate">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">To Date</label>
                 <input type="date" class="form-control" id="to" [formControl]="f.ToDate">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputState" class="form-label">Exchange</label>
                 <select id="inputState" class="form-select" [formControl]="f.Exchange">
                     <option selected value="NSE">NSE</option>
@@ -19,7 +19,7 @@
                     <option value="MCX">MCX</option>
                 </select>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputState" class="form-label">Segment</label>
                 <select id="inputState" class="form-select" [formControl]="f.Segment">
                     <option value="COM">COM</option>
@@ -27,11 +27,11 @@
                     <option selected value="FNO">FNO</option>
                 </select>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">Bill No</label>
                 <input type="text" class="form-control" id="to" [formControl]="f.BillNo">
             </div>
-            <div class="col-12 text-end">
+            <div class="col-12 text-end mt-0">
                 <button type="submit" class="btn btn-primary">Run</button>
             </div>
         </form>
