--- a/src/app/pages/Reports/derivative-p-and-l-statement/derivative-p-and-l-statement.component.html
+++ b/src/app/pages/Reports/derivative-p-and-l-statement/derivative-p-and-l-statement.component.html
@@ -3,7 +3,7 @@
     <h2 class="text-center stox-sub-title"> From 01-12-2023 To 31-03-2024</h2>
     <ng-container>
         <form class="row g-3 mb-3" [formGroup]="derivativePLGroup" (ngSubmit)="save()">
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputState" class="form-label">Exchange</label>
                 <select id="inputState" class="form-select" [formControl]="f.Exchange">
                     <option selected value="NSE">NSE</option>
@@ -11,7 +11,7 @@
                     <option value="MCX">MCX</option>
                 </select>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputState" class="form-label">Segment</label>
                 <select id="inputState" class="form-select" [formControl]="f.Segment">
                     <option value="COM">COM</option>
@@ -19,34 +19,34 @@
                     <option selected value="FNO">FNO</option>
                 </select>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputEmail4" class="form-label">From Date</label>
                 <input type="date" class="form-control" id="From" [formControl]="f.FromDate">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">To Date</label>
                 <input type="date" class="form-control" id="to" [formControl]="f.ToDate">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">Expiry Date</label>
                 <input type="date" class="form-control" id="to" [formControl]="f.ExpiryDate">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputState" class="form-label">Option Type</label>
                 <select id="inputState" class="form-select" [formControl]="f.OptionType">
                     <option value="CE">Call</option>
                     <option value="PE">Put</option>
                 </select>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">CTCLID</label>
                 <input type="text" class="form-control" id="CTCLID" placeholder="CTC LID" [formControl]="f.CTCLID">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">User ID</label>
                 <input type="text" class="form-control" id="UserID" placeholder="User ID" [formControl]="f.UserID">
             </div>
-            <div class="col-12">
+            <div class="col-md-3">
                 <div class="form-check">
                     <label class="form-check-label" for="gridCheck">
                         Quantity In Lot
@@ -54,7 +54,7 @@
                     <input class="form-check-input" type="checkbox" id="gridCheck">
                 </div>
             </div>
-            <div class="col-12 text-end">
+            <div class="col-12 text-end mt-0">
                 <button type="submit" class="btn btn-primary">Run</button>
             </div>
         </form>
