--- a/src/app/pages/Request/kycmodification-request-letter/kycmodification-request-letter.component.html
+++ b/src/app/pages/Request/kycmodification-request-letter/kycmodification-request-letter.component.html
@@ -2,16 +2,16 @@
     <h1 class="text-center stox-title">KYC Modification Request Letter</h1>
     <ng-container>
         <form class="row g-3">
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputEmail4" class="form-label">From Date</label>
                 <input type="date" class="form-control" id="From">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label for="inputPassword4" class="form-label">To Date</label>
                 <input type="date" class="form-control" id="to">
             </div>
-            <div class="col-12 text-center">
-                <input type="submit" value=""
+            <div class="col-3">
+                <input style="margin-top: 27px;" type="submit" value=""
                     class="fa fa-file-pdf-o btn  btn-default btn-block text-danger stox-btn btn-2">
             </div>
         </form>
