--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -67,3 +67,27 @@
     height: 22px;
     width: 50px;
 }
+
+#myTabContent .form-control {
+    padding: 10px;
+    width: 92%;
+    border: none;
+    border-bottom: 1px solid #c5ccd6;
+}
+
+#myTabContent .btn-edit {
+    border-bottom: 1px solid #c5ccd6 !important;
+    padding: 10px;
+    border: none;
+    border-bottom-right-radius: 6px;
+    background-color: white;
+}
+
+#myTabContent .input-group {
+    margin-top: -5px;
+}
+
+.form-control:focus {
+    border-color: #ced4da; /* Set the desired border color or use transparent */
+    box-shadow: none; /* Remove any box shadow */
+}
