--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,3 +72,7 @@ ng-multiselect-dropdown .multiselect-dropdown .dropdown-btn {
 .toggle-sidebar .sidebar-nav .nav-content li {
     justify-content: flex-start !important;
 }
+
+.input-group button {
+    border-color: #dee2e6;
+}
