--- a/src/app/pages/financial-ledger/financial-ledger.component.html
+++ b/src/app/pages/financial-ledger/financial-ledger.component.html
@@ -22,7 +22,7 @@
             </div>
             <div class="col-md-3">
                 <label for="inputState" class="form-label">Segment</label>
-                <select class="form-control  input-sm" id="Segment" name="Segment" [formControl]="f.Segment">
+                <select class="form-select" id="Segment" name="Segment" [formControl]="f.Segment">
                     <option selected="selected" value="ALL">ALL</option>
                     <option value="CAP">CAP</option>
                     <option value="COM">COM</option>
