--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -26,10 +26,9 @@
                             <i class="bi bi-cart"></i>
                         </div>
                         <div class="ps-3">
-                            <h6>145</h6>
-                            <span class="text-success small pt-1 fw-bold">12%</span> <span
-                                class="text-muted small pt-2 ps-1">increase</span>
-
+                            <h6>$140</h6>
+                            <span class="text-success small pt-1 fw-bold">12%</span>
+                            <span class="text-muted small pt-2 ps-1">increase</span>
                         </div>
                     </div>
                 </div>
@@ -47,25 +46,22 @@
                         </div>
                         <div class="ps-3">
                             <h6>$3,264</h6>
-                            <span class="text-success small pt-1 fw-bold">8%</span> <span
-                                class="text-muted small pt-2 ps-1">increase</span>
+                            <!-- <span class="text-success small pt-1 fw-bold">8%</span>
+                            <span class="text-muted small pt-2 ps-1">increase</span> -->
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
 
         <div class="col-xxl-3 col-md-6">
             <div class="card info-card revenue-card">
-
                 <div class="filter">
                     <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                         <li class="dropdown-header text-start">
                             <h6>Filter</h6>
                         </li>
-
                         <li><a class="dropdown-item" href="#">Today</a></li>
                         <li><a class="dropdown-item" href="#">This Month</a></li>
                         <li><a class="dropdown-item" href="#">This Year</a></li>
@@ -74,16 +70,14 @@
 
                 <div class="card-body">
                     <h5 class="card-title">Profit <span>| This Month</span></h5>
-
                     <div class="d-flex align-items-center">
                         <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                             <i class="bi bi-bar-chart"></i>
                         </div>
                         <div class="ps-3">
                             <h6>$300</h6>
-                            <span class="text-success small pt-1 fw-bold">8%</span> <span
-                                class="text-muted small pt-2 ps-1">increase</span>
-
+                            <span class="text-success small pt-1 fw-bold">8%</span>
+                            <span class="text-muted small pt-2 ps-1">increase</span>
                         </div>
                     </div>
                 </div>
@@ -93,7 +87,6 @@
 
         <div class="col-xxl-3 col-md-6">
             <div class="card info-card loss-card">
-
                 <div class="filter">
                     <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
@@ -116,19 +109,16 @@
                         </div>
                         <div class="ps-3">
                             <h6>$10</h6>
-                            <span class="text-danger small pt-1 fw-bold">2%</span> <span
-                                class="text-muted small pt-2 ps-1">increase</span>
-
+                            <span class="text-danger small pt-1 fw-bold">2%</span>
+                            <span class="text-muted small pt-2 ps-1">increase</span>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
     <div class="stox-card">
         <!-- Reports -->
-
 
         <div class="card-body">
             <div class="row">
