--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -1,95 +1,97 @@
 .img-account-profile {
-    height: 10rem;
+  height: 10rem;
 }
 
 .rounded-circle {
-    border-radius: 50% !important;
+  border-radius: 50% !important;
 }
 
 .card {
-    box-shadow: 0 0.15rem 1.75rem 0 rgb(33 40 50 / 15%);
-    border: auto;
+  box-shadow: 0 0.15rem 1.75rem 0 rgb(33 40 50 / 15%);
+  border: auto;
 }
 
 .card .card-header {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .card-header:first-child {
-    border-radius: 0.35rem 0.35rem 0 0;
+  border-radius: 0.35rem 0.35rem 0 0;
 }
 
 .card-header {
-    padding: 1rem 1.35rem;
-    margin-bottom: 0;
-    background-color: rgba(33, 40, 50, 0.03);
-    border-bottom: 1px solid rgba(33, 40, 50, 0.125);
+  padding: 1rem 1.35rem;
+  margin-bottom: 0;
+  background-color: rgba(33, 40, 50, 0.03);
+  border-bottom: 1px solid rgba(33, 40, 50, 0.125);
 }
 
 .form-control,
 .dataTable-input {
-    display: block;
-    width: 100%;
-    padding: 0.875rem 1.125rem;
-    font-size: 0.875rem;
-    font-weight: 400;
-    line-height: 1;
-    color: #69707a;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #c5ccd6;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border-radius: 0.35rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  display: block;
+  width: 100%;
+  padding: 0.875rem 1.125rem;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1;
+  color: #69707a;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #c5ccd6;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0.35rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .nav-borders .nav-link.active {
-    color: #0061f2;
-    border-bottom-color: #0061f2;
+  color: #0061f2;
+  border-bottom-color: #0061f2;
 }
 
 .nav-borders .nav-link {
-    color: #69707a;
-    border-bottom-width: 0.125rem;
-    border-bottom-style: solid;
-    border-bottom-color: transparent;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: 1rem;
-    margin-right: 1rem;
+  color: #69707a;
+  border-bottom-width: 0.125rem;
+  border-bottom-style: solid;
+  border-bottom-color: transparent;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .auto-size {
-    height: 22px;
-    width: 50px;
+  height: 22px;
+  width: 50px;
 }
 
 #myTabContent .form-control {
-    padding: 10px;
-    width: 92%;
-    border: none;
-    border-bottom: 1px solid #c5ccd6;
+  padding: 10px;
+  width: 92%;
+  border: none;
+  border-bottom: 1px solid #c5ccd6;
 }
 
 #myTabContent .btn-edit {
-    border-bottom: 1px solid #c5ccd6 !important;
-    padding: 10px;
-    border: none;
-    border-bottom-right-radius: 6px;
-    background-color: white;
+  border-bottom: 1px solid #c5ccd6 !important;
+  padding: 10px;
+  border: none;
+  border-bottom-right-radius: 6px;
+  background-color: white;
 }
 
 #myTabContent .input-group {
-    margin-top: -5px;
+  margin-top: -5px;
 }
 
 .form-control:focus {
-    border-color: #ced4da; /* Set the desired border color or use transparent */
-    box-shadow: none; /* Remove any box shadow */
+  border-color: #ced4da;
+  /* Set the desired border color or use transparent */
+  box-shadow: none;
+  /* Remove any box shadow */
 }
 
 
@@ -99,109 +101,120 @@
 
 
 input[switch] {
-    display: none;
-  }
-  input[switch] + label {
-    font-size: 1em;
-    line-height: 1;
-    width: 4.4rem;
-    height: 1.5rem;
-    background-color: #ddd;
-    background-image: none;
-    border-radius: 2rem;
-    padding: 0.1666666667rem;
-    cursor: pointer;
-    display: inline-block;
-    text-align: center;
-    position: relative;
-    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2) inset;
-    font-family: inherit;
-    -webkit-transition: all 0.1s ease-in-out;
-    transition: all 0.1s ease-in-out;
-  }
-  input[switch] + label:before {
-    /* Label */
-    text-transform: uppercase;
-    color: #b7b7b7;
-    content: attr(data-off-label);
-    display: block;
-    font-family: inherit;
-    font-family: FontAwesome, inherit;
-    font-weight: 500;
-    font-size: 0.6rem;
-    line-height: 1.22rem;
-    position: absolute;
-    right: 0.2166666667rem;
-    margin: 0.2166666667rem;
-    top: 0;
-    text-align: center;
-    min-width: 1.6666666667rem;
-    overflow: hidden;
-    -webkit-transition: all 0.1s ease-in-out;
-    transition: all 0.1s ease-in-out;
-  }
-  input[switch] + label:after {
-    /* Slider */
-    content: '';
-    position: absolute;
-    left: 0.1666666667rem;
-    background-color: #f7f7f7;
-    box-shadow: none;
-    border-radius: 2rem;
-    height: 1.22rem;
-    width: 1.22rem;
-    -webkit-transition: all 0.1s ease-in-out;
-    transition: all 0.1s ease-in-out;
-  }
-  input[switch]:checked + label {
-    background-color: lightblue;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.15)), to(rgba(0, 0, 0, 0.2)));
-    background-image: linear-gradient(rgba(255, 255, 255, 0.15), rgba(0, 0, 0, 0.2));
-    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3) inset;
-  }
-  input[switch]:checked + label:before {
-    color: #fff;
-    content: attr(data-on-label);
-    right: auto;
-    left: 0.2166666667rem;
-  }
-  input[switch]:checked + label:after {
-    left: 3rem;
-    background-color: #f7f7f7;
-    box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.3);
-  }
-  
-  input[switch="bool"] + label {
-    background-color: #ee6562;
-  }
-  input[switch="bool"] + label:before {
-    color: #fff !important;
-  }
-  input[switch="bool"]:checked + label {
-    background-color: #BCE954;
-  }
-  input[switch="bool"]:checked + label:before {
-    color: #fff !important;
-  }
-  
-  input[switch="default"]:checked + label {
-    background-color: #a2a2a2;
-  }
-  input[switch="default"]:checked + label:before {
-    color: #fff !important;
-  }
-  
-  input[switch="success"]:checked + label {
-    background-color: #BCE954;
-  }
-  input[switch="success"]:checked + label:before {
-    color: #fff !important;
-  }
-  
-  input[switch="warning"]:checked + label {
-    background-color: gold;
-  }
-  input[switch="warning"]:checked + label:before {
-    color: #fff !important;
-  }
-  
+  display: none;
+}
+
+input[switch]+label {
+  font-size: 1em;
+  line-height: 1;
+  width: 4.4rem;
+  height: 1.5rem;
+  background-color: #ddd;
+  background-image: none;
+  border-radius: 2rem;
+  padding: 0.1666666667rem;
+  cursor: pointer;
+  display: inline-block;
+  text-align: center;
+  position: relative;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2) inset;
+  font-family: inherit;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+}
+
+input[switch]+label:before {
+  /* Label */
+  text-transform: uppercase;
+  color: #b7b7b7;
+  content: attr(data-off-label);
+  display: block;
+  font-family: inherit;
+  font-family: FontAwesome, inherit;
+  font-weight: 500;
+  font-size: 0.6rem;
+  line-height: 1.22rem;
+  position: absolute;
+  right: 0.2166666667rem;
+  margin: 0.2166666667rem;
+  top: 0;
+  text-align: center;
+  min-width: 1.6666666667rem;
+  overflow: hidden;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+}
+
+input[switch]+label:after {
+  /* Slider */
+  content: '';
+  position: absolute;
+  left: 0.1666666667rem;
+  background-color: #f7f7f7;
+  box-shadow: none;
+  border-radius: 2rem;
+  height: 1.22rem;
+  width: 1.22rem;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+}
+
+input[switch]:checked+label {
+  background-color: lightblue;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.15)), to(rgba(0, 0, 0, 0.2)));
+  background-image: linear-gradient(rgba(255, 255, 255, 0.15), rgba(0, 0, 0, 0.2));
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3) inset;
+}
+
+input[switch]:checked+label:before {
+  color: #fff;
+  content: attr(data-on-label);
+  right: auto;
+  left: 0.2166666667rem;
+}
+
+input[switch]:checked+label:after {
+  left: 3rem;
+  background-color: #f7f7f7;
+  box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.3);
+}
+
+input[switch="bool"]+label {
+  background-color: #dc3545;
+}
+
+input[switch="bool"]+label:before {
+  color: #fff !important;
+}
+
+input[switch="bool"]:checked+label {
+  background-color: #198754;
+}
+
+input[switch="bool"]:checked+label:before {
+  color: #fff !important;
+}
+
+input[switch="default"]:checked+label {
+  background-color: #a2a2a2;
+}
+
+input[switch="default"]:checked+label:before {
+  color: #fff !important;
+}
+
+input[switch="success"]:checked+label {
+  background-color: #198754;
+}
+
+input[switch="success"]:checked+label:before {
+  color: #fff !important;
+}
+
+input[switch="warning"]:checked+label {
+  background-color: gold;
+}
+
+input[switch="warning"]:checked+label:before {
+  color: #fff !important;
+}
