--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -3,9 +3,9 @@
 <!-- End Header -->
 
 <!-- ======= Sidebar ======= -->
-<aside id="sidebar" class="sidebar">
+<!-- <aside id="sidebar" class="sidebar">
     <app-side-bar></app-side-bar>
-</aside>
+</aside> -->
 <!-- End Sidebar-->
 
 <main id="main" class="main">
