--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -5,41 +5,27 @@
     <a href="index.html" class="logo d-flex align-items-center">
       <img src="../../../assets/images/my-stocks-logo.png" alt="">
     </a>
-    <i class="bi bi-list toggle-sidebar-btn" (click)="showHide()"></i>
-  </div><!-- End Logo -->
-
-  <div class="search-bar">
-    <form class="search-form d-flex align-items-center" method="POST" action="#">
-      <input type="text" name="query" placeholder="Search" title="Enter search keyword">
-      <button type="submit" title="Search"><i class="bi bi-search"></i></button>
-    </form>
-  </div><!-- End Search Bar -->
+  </div>
 
   <nav class="header-nav ms-auto">
     <ul class="d-flex align-items-center">
 
-      <!-- <li class="nav-item dropdown d-md-block d-sm-none">
+      <li class="nav-item nav-icon">
+        <a class="nav-link " routerLink="/home">
+          <span class="">Dashboard</span>
+        </a>
+      </li>
+
+      <li class="nav-item dropdown d-md-block d-sm-none">
         <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-          <i class="bi bi-bell"></i>
-          <span class="badge bg-primary badge-number">4</span>
+          <span class="">Portfolio</span>
         </a>
 
         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
-          <li class="dropdown-header">
-            You have 4 new notifications
-            <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-          </li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
           <li class="notification-item">
-            <i class="bi bi-exclamation-circle text-warning"></i>
-            <div>
-              <h4>Lorem Ipsum</h4>
-              <p>Quae dolorem earum veritatis oditseno</p>
-              <p>30 min. ago</p>
-            </div>
+            <a routerLinkActive='active' routerLink="/home/position">
+              <span>Position</span>
+            </a>
           </li>
 
           <li>
@@ -47,120 +33,187 @@
           </li>
 
           <li class="notification-item">
-            <i class="bi bi-x-circle text-danger"></i>
-            <div>
-              <h4>Atque rerum nesciunt</h4>
-              <p>Quae dolorem earum veritatis oditseno</p>
-              <p>1 hr. ago</p>
-            </div>
-          </li>
-
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li class="notification-item">
-            <i class="bi bi-check-circle text-success"></i>
-            <div>
-              <h4>Sit rerum fuga</h4>
-              <p>Quae dolorem earum veritatis oditseno</p>
-              <p>2 hrs. ago</p>
-            </div>
-          </li>
-
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li class="notification-item">
-            <i class="bi bi-info-circle text-primary"></i>
-            <div>
-              <h4>Dicta reprehenderit</h4>
-              <p>Quae dolorem earum veritatis oditseno</p>
-              <p>4 hrs. ago</p>
-            </div>
-          </li>
-
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-          <li class="dropdown-footer">
-            <a href="#">Show all notifications</a>
+            <a routerLinkActive='active' routerLink="/home/holding">
+              <span>Holding</span>
+            </a>
           </li>
         </ul>
-      </li> -->
-      <!-- End Notification Nav -->
+      </li>
 
-      <!-- <li class="nav-item dropdown d-md-block d-sm-none">
-          <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-            <i class="bi bi-chat-left-text"></i>
-            <span class="badge bg-success badge-number">3</span>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages">
-            <li class="dropdown-header">
-              You have 3 new messages
-              <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
+      <li class="nav-item dropdown d-md-block d-sm-none">
+        <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
+          <span class="">Tender Offer</span>
+        </a>
 
-            <li class="message-item">
-              <a href="#">
-                <img src="assets/img/messages-1.jpg" alt="" class="rounded-circle">
-                <div>
-                  <h4>Maria Hudson</h4>
-                  <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                  <p>4 hrs. ago</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
+        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
+          <li class="notification-item">
+            <a routerLinkActive='active' routerLink="/home/ACH-request">
+              <span>IPO</span>
+            </a>
+          </li>
 
-            <li class="message-item">
-              <a href="#">
-                <img src="assets/img/messages-2.jpg" alt="" class="rounded-circle">
-                <div>
-                  <h4>Anna Nelson</h4>
-                  <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                  <p>6 hrs. ago</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
+          <li>
+            <hr class="dropdown-divider">
+          </li>
 
-            <li class="message-item">
-              <a href="#">
-                <img src="assets/img/messages-3.jpg" alt="" class="rounded-circle">
-                <div>
-                  <h4>David Muldon</h4>
-                  <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                  <p>8 hrs. ago</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
+          <li class="notification-item">
+            <a routerLinkActive='active' routerLink="/home/buy-back">
+              <span>Buy Back</span>
+            </a>
+          </li>
+        </ul>
+      </li>
 
-            <li class="dropdown-footer">
-              <a href="#">Show all messages</a>
-            </li>
-          </ul>
-        </li> -->
-      <!-- End Messages Nav -->
+      <li class="nav-item dropdown d-md-block d-sm-none">
+        <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
+          <span class="">Reports</span>
+        </a>
 
-      <li class="nav-item dropdown pe-3">
+        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
+          <li class="notification-item">
+            <a routerLinkActive='active' routerLink="/home/ledger">
+              <span>Ledger</span>
+            </a>
+          </li>
 
-        <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+
+          <li class="notification-item">
+            <a routerLinkActive='active' routerLink="/home/equity-trade-confirmation">
+              <span>Position</span>
+            </a>
+          </li>
+
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+
+          <li class="notification-item">
+            <a routerLinkActive='active' routerLink="/home/equity-transaction-ledger">
+              <span>Holding</span>
+            </a>
+          </li>
+
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+
+          <li class="notification-item">
+            <a class="nav-link collapsed" routerLinkActive='active' routerLink="/home/long-short">
+              <span>P&L Report</span>
+            </a>
+          </li>
+
+        </ul>
+      </li>
+
+      <li class="nav-item dropdown d-md-block d-sm-none">
+        <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
+          <span class="">Funds</span>
+        </a>
+
+        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
+          <li class="notification-item">
+            <a routerLinkActive='active' routerLink="/home/derivative-trade-report">
+              <span>Add Funds</span>
+            </a>
+          </li>
+
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+
+          <li class="notification-item">
+            <a routerLinkActive='active' routerLink="/home/net-position-derivative">
+              <span>Withdrawal</span>
+            </a>
+          </li>
+
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+
+          <li class="notification-item">
+            <a routerLinkActive='active' routerLink="/home/equity-trade-report">
+              <span>Ledger</span>
+            </a>
+          </li>
+        </ul>
+      </li>
+
+      <li class="nav-item dropdown d-md-block d-sm-none">
+        <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
+          <span class="">Download</span>
+        </a>
+
+        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
+          <li class="notification-item">
+            <a routerLinkActive='active'>
+              <span>CN</span>
+            </a>
+          </li>
+
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+
+          <li class="notification-item">
+            <a routerLinkActive='active'>
+              <span>DMS</span>
+            </a>
+          </li>
+
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+
+          <li class="notification-item">
+            <a routerLinkActive='active'>
+              <span>Transaction Report</span>
+            </a>
+          </li>
+
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+
+          <li class="notification-item">
+            <a routerLinkActive='active'>
+              <span>AGTS</span>
+            </a>
+          </li>
+
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+
+          <li class="notification-item">
+            <a routerLinkActive='active'>
+              <span>STT Certificate</span>
+            </a>
+          </li>
+
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+
+          <li class="notification-item">
+            <a routerLinkActive='active'>
+              <span>DP Holding</span>
+            </a>
+          </li>
+
+        </ul>
+      </li>
+
+      <li class="nav-item dropdown pe-3 ">
+
+        <a class="nav-link nav-profile d-flex align-items-center pe-0 side-border" href="#" data-bs-toggle="dropdown">
           <img src="../../../assets/images/user-img.png" alt="Profile" class="rounded-circle">
           <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
-        </a><!-- End Profile Iamge Icon -->
-
+        </a>
         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
           <li class="dropdown-header">
             <h6>Kevin Anderson</h6>
@@ -193,7 +246,7 @@
           <li>
             <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
               <i class="bi bi-question-circle"></i>
-              <span>Need Help?</span>
+              <span>Supports</span>
             </a>
           </li>
           <li>
@@ -201,16 +254,15 @@
           </li>
 
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="#">
+            <a class="dropdown-item d-flex align-items-center" (click)="logOut()">
               <i class="bi bi-box-arrow-right"></i>
               <span>Sign Out</span>
             </a>
           </li>
 
-        </ul><!-- End Profile Dropdown Items -->
-      </li><!-- End Profile Nav -->
-
+        </ul>
+      </li>
     </ul>
-  </nav><!-- End Icons Navigation -->
-
-</header><!-- End Header -->
+  </nav>
+</header>
+<!-- End Header -->
