--- a/src/app/pages/layout/side-bar/side-bar.component.html
+++ b/src/app/pages/layout/side-bar/side-bar.component.html
@@ -39,7 +39,7 @@
             <div id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                 <ul class="p-0">
                     <li>
-                        <a routerLinkActive='active' routerLink="/home/bill-summary-equity">
+                        <a routerLinkActive='active' routerLink="/home/FinancialLedger">
                             <i class="bi bi-circle"></i><span>Ledger</span>
                         </a>
                     </li>
