--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -71,7 +71,7 @@
 
         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
           <li class="notification-item">
-            <a routerLinkActive='active' routerLink="/home/ledger">
+            <a routerLinkActive='active' routerLink="/home/FinancialLedger">
               <span>Ledger</span>
             </a>
           </li>
